# accord-helloworld-app

./: .gitignore  Cargo.toml  LICENSE  README.md
acceptance-of-delivery-clause/: Cargo.toml
acceptance-of-delivery-clause/src/: main.rs
copyright-license/: Cargo.toml
copyright-license/model/: request.json
copyright-license/src/: main.rs
copyright-license/src/lib/: mod.rs  org_accordproject_address.rs  org_accordproject_copyrightlicense.rs  org_accordproject_geo.rs  org_accordproject_money.rs  org_accordproject_obligation.rs  org_accordproject_organization.rs  org_accordproject_party.rs
full-upon-signature/: Cargo.toml
full-upon-signature/model/: model.cto  request.json
full-upon-signature/src/: main.rs
incorporation-certificate/: Cargo.toml
incorporation-certificate/model/: model.cto  request.json
incorporation-certificate/src/: main.rs
model/: model.cto  request.json  request_orig.json  schema.json
src/: concerto.rs  concerto_1_0_0.rs  concerto_at_1_0_0.rs  lib.rs  main.rs  org_accordproject_acceptanceofdelivery_0_15_0.rs  org_accordproject_address_0_2_0.rs  org_accordproject_contract.rs  org_accordproject_geo_0_2_0.rs  org_accordproject_helloworld.rs  org_accordproject_organization_0_2_0.rs  org_accordproject_runtime.rs  org_accordproject_runtime_0_2_0.rs  utils.rs
src/lib/: concerto.rs  concerto_1_0_0.rs  mod.rs  org_accordproject_acceptanceofdelivery_0_15_0.rs  org_accordproject_address_0_2_0.rs  org_accordproject_contract_0_2_0.rs  org_accordproject_geo_0_2_0.rs  org_accordproject_organization_0_2_0.rs  org_accordproject_runtime_0_2_0.rs  (+1 more)
(+14 files in other folders)
